<resources>
    <string name="app_name">Gestiondepoints</string>
    <string name="first_name">Prénom</string>
    <string name="last_name">Nom de famille</string>
    <string name="add_student">Ajouter un étudiant</string>
    <string name="student_list">Liste des étudiants</string>
    <string name="add_class">Ajouter une classe</string>
    <string name="class_list">Liste des classe</string>
    <string name="set_className">Nom de la classe</string>
    <string name="student_name">Student Name</string>
    <string name="evaluation">Evaluation</string>
    <string name="max_points">max_points</string>
</resources>