<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_class"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="16dp"/>

    <EditText
        android:id="@+id/editClassName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Prénom"
        android:hint="@string/set_className"
        android:inputType="text" />

    <Button
        android:id="@+id/add_class_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_class"
        />

    <TextView
        android:id="@+id/class_list_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/class_list"
        android:textSize="16sp"
        android:paddingTop="16dp"/>

    <fragment
        android:id="@+id/class_list_fragment"
        android:name="be.helha.gestiondepoints.views.fragments.ListFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>